--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "wishlist-app",
   "version": "1.0.0",
+  "description": "A simple wishlist application",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "express": "^4.18.2",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^7.3.1"
-  }
+    "mongoose": "^5.11.15"
+  },
+  "author": "Your Name",
+  "license": "ISC"
 }
